--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyos-vmwaretools-scripts (1.2.4) unstable; urgency=low
+
+  * New release.
+
+ -- VyOS maintainers <maintainers@vyos.io>  Tue, 10 Dec 2019 23:40:07 +0200
+
 vyos-vmwaretools-scripts (1.0-1) unstable; urgency=low
 
   * Initial release (Closes: T1028)  https://phabricator.vyos.net/T1028
